# verbatim

./: .env.example  .gitignore  CLAUDE.md  LICENSE  README.md  pyproject.toml  start.ps1
.github/workflows/: ci.yml
docs/superpowers/plans/: 2026-06-13-verbatim-foundation.md  2026-06-13-verbatim-phase2.md
docs/superpowers/specs/: 2026-06-13-verbatim-design.md
plans/: 001-epub-filename-sanitize.md  002-project-status-running-paused.md  003-db-voice-methods-and-assembled-status.md  004-casting-director-api.md  005-ui-tests-and-m4b-api-test.md  README.md
src/verbatim/: __init__.py  config.py
src/verbatim/api/: app.py  models.py  pipeline_manager.py
src/verbatim/audio/: assembler.py  m4b.py
src/verbatim/casting/: director.py
src/verbatim/db/: base.py  casting.py  chapters.py  manager.py  projects.py  schema.py
src/verbatim/ingest/: epub.py  segmenter.py
src/verbatim/llm/: director.py  parsing.py  prompts.py
src/verbatim/pipeline/: orchestrator.py
src/verbatim/tts/: emotion.py  engine.py  voices.py
tests/: test_api.py  test_audio_assembler.py  test_casting.py  test_casting_director.py  test_chapters.py  test_config.py  test_epub.py  test_llm_director.py  test_llm_parsing.py  test_llm_prompts.py  test_orchestrator.py  test_projects.py  test_schema.py  test_segmenter.py  test_tts_engine.py
ui/: next.config.ts  package-lock.json  package.json  tailwind.config.ts  tsconfig.tsbuildinfo
ui/app/: globals.css  layout.tsx  page.tsx
ui/app/projects/[id]/: page.tsx
ui/components/: CastingStudio.test.tsx  CastingStudio.tsx  ChapterQueue.test.tsx  ChapterQueue.tsx  CommandStrip.tsx  Toasts.tsx
ui/hooks/: usePipelineState.ts  useSSE.ts
ui/lib/: api.ts  types.ts
