[project]
name = "verbatim"
version = "0.1.0"
description = "Turn any novel EPUB into a multi-voice audiobook with per-character voices and per-line emotion - fully local."
requires-python = ">=3.11"
license = { text = "MIT" }
dependencies = [
    "ebooklib>=0.18",
    "beautifulsoup4>=4.12",
    "spacy>=3.7",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "ruff>=0.4",
    "mypy>=1.10",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.ruff.lint.per-file-ignores]
# FastAPI uses Depends() in function default args — that is the intended pattern.
"src/verbatim/api/app.py" = ["B008"]
# Test files insert to sys.path before project imports; E402 is unavoidable.
"tests/*.py" = ["E402"]

[tool.mypy]
python_version = "3.11"
disallow_untyped_defs = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
